add more config and create table